[project]
name = "affine-rl-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "benchmarl>=1.5.0",
    "copier>=9.7.1",
    "gymnasium[mujoco]>=1.2.0",
    "hatchling>=1.27.0",
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "matplotlib>=3.10.3",
    "moviepy>=2.2.1",
    "numba>=0.61.2",
    "poetry>=2.1.3",
    "pygame>=2.6.1",
    "pyvirtualdisplay>=3.0",
    "tensorboard>=2.19.0",
    "tensordict>=0.8.3",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
    "torchaudio>=2.7.1",
    "torchrl>=0.8.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "tyro>=0.9.26",
    "vmas>=1.5.0",
]



[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.workspace]
members = [
    "affine_rl_torch",
]

